# https://github.com/astral-sh/uv/issues/3957
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SupplyGraph"
version = "0.2.0"
description = "Graph based supply chain analysis of debian packages"
authors = [{name = "Tobias Specht", email="tobias.specht@aisec.fraunhofer.de"}]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas >=2.1.2",
    "numpy >=2.2.0",
    "networkx>=3.4.2",
]

# TODO: Change to dependency-groups once https://github.com/pypa/pip/issues/12963 is resolved
[project.optional-dependencies]
dev = [
    "mypy >=1.0,<2.0",
    "python-lsp-server >=1.5,<2.0",
    "ruff >=0.8.0",
    "pytest >=7.1,<9.0",
]

[project.scripts]
"analyze-build-graph" = "SupplyGraph.main:main"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    # TODO: Enable this
    # "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestlye
    "F",    # pyflakes
    "I",    # isort
    "PL",   # pylint
    "PTH",  # flake8-use-pathlib
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
]
ignore = [
    "E501",     # line length
    "PLR2004",  # magic value used in comparison
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments to function call
    "PLR0915",  # too many statements
    "PLC1901",  # empty string is falsey
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
